--- a/views/partials/blogid/coms/coms.hbs
+++ b/views/partials/blogid/coms/coms.hbs
@@ -14,7 +14,7 @@ Partial : Id/Commentaires
         <div class="col-md-12">
             <div class="client-profil position-relative">
 
-                <cite> <img class="rounded-circle" src="/assets/data/users/{{ this.imguser }}" alt="image de profile">
+                <cite> <img class="rounded-circle" src="/assets/data/users/{{ this.imguser }}" alt="image de profil">
 
                     {{ this.pseudouser}}</cite>
                 <blockquote>
