--- a/views/partials/HeadDefault.hbs
+++ b/views/partials/HeadDefault.hbs
@@ -11,6 +11,7 @@ Page type :Head par default
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Site test de l'association Graine de Citoyen Montgesnois par Lucas Ledoux en 2022">
+    <meta name = "keyword" content = "Graine de citoyen, Sarthe, Association, Environnement,Montfort-le-Gesnois">
     <title> ⚡ Graine de Citoyen Montgesnois ⚡ </title>
     <!---Style-->
      <link href="/assets/css/logo-modified.png" rel="icon">
